fixing genre not showing up

--- a/src/components/movie/MovieCard/MovieCard.css
+++ b/src/components/movie/MovieCard/MovieCard.css
@@ -102,7 +102,7 @@
   .play-video {
     font-size: 5rem;
   }
-  .movie-genre {
+  .genre-bottom {
     display: none;
   }
 }
